# wgpu_react

./: .gitignore  Cargo.toml  LICENSE  index.html
.github/workflows/: build-wasm.yml  deploy.yml
js/: package.json  wgpu-wasm.d.ts  wgpu-wasm.js  wgpu-wasm_bg.wasm  wgpu-wasm_bg.wasm.d.ts
src/: buffer.rs  lib.rs  main.rs  shader.wgsl
wgpu_html/: package.json  server.js
