[package]
name = "render_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.0.0"
pollster = "0.3"
bytemuck = {version = "1.16", features = ["derive"]}

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = {version = "22.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "Element"
]}